Working printing list of files in directory in Google Drive and added serilog logging with dependency injection

--- a/Quirrel/appsettings.Development.json
+++ b/Quirrel/appsettings.Development.json
@@ -2,7 +2,7 @@
   "UserConfig": {
     "Test": "Test",
     "MinecraftSavesPath": "C:\\Users\\Krzysiek\\AppData\\Roaming\\.minecraft\\saves",
-    "PathToCredentials": "C:\\Users\\Krzysiek\\Source\\Repos\\Funiek\\Quirrel\\Persistance\\credentials.json"
+    "PathToCredentials": "C:\\Users\\Krzysiek\\source\\repos\\Quirrel\\Quirrel\\Persistence\\credentials.json"
   },
   "Logging": {
     "LogLevel": {
